增加串口测试代码

--- a/n32rtos.uvprojx
+++ b/n32rtos.uvprojx
@@ -584,6 +584,16 @@
               <FileType>1</FileType>
               <FilePath>.\src\n32l40x_it.c</FilePath>
             </File>
+            <File>
+              <FileName>led.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\led.c</FilePath>
+            </File>
+            <File>
+              <FileName>uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\uart.c</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
